--- a/MensMorris.Engine/MensMorris.Engine.csproj
+++ b/MensMorris.Engine/MensMorris.Engine.csproj
@@ -40,14 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions.cs" />
     <Compile Include="BoardPosition.cs" />
-    <Compile Include="KickAction.cs" />
     <Compile Include="Match.cs" />
     <Compile Include="GamePhase.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="Direction.cs" />
-    <Compile Include="MoveAction.cs" />
-    <Compile Include="PlaceAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slot.cs" />
     <Compile Include="Tile.cs" />
