--- a/MensMorris.Bot/MensMorris.Bot.csproj
+++ b/MensMorris.Bot/MensMorris.Bot.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HeuristicBot.cs" />
     <Compile Include="RandomBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
