--- a/MensMorris.Engine/MensMorris.Engine.csproj
+++ b/MensMorris.Engine/MensMorris.Engine.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IPlayer.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Slot.cs" />
     <Compile Include="Tile.cs" />
   </ItemGroup>
